# Clocker-Berkarat

./: README.md  clocker  docker-compose.yaml
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2025-03-10-132032_create_users/: up.sql
backend/src/: db.rs  main.rs  schema.rs  validation.rs
backend/src/handlers/: users.rs
backend/src/models/: users.rs
backend/src/repository/: users.rs
backend/src/routes/: mod.rs  users.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: admin.tsx  routes.tsx
frontend/src/admin/: AdminLayout.css  AdminLayout.tsx  darkmode.jsx
frontend/src/admin/components/: footer.jsx  navbar.tsx  sidebar.jsx
frontend/src/admin/context/: is-sidebar-active.jsx
frontend/src/admin/css/: app-dark.css  app.css  detail.css  iconly.css
frontend/src/admin/js/: app.js
frontend/src/admin/page/: aboutUs.jsx  banner.jsx  category.jsx  contract.css  contract.jsx  dashboard.jsx  language.jsx  project.jsx  transaction.css  transaction.jsx  user.tsx
frontend/src/components/: PrivateRoute.jsx  apiAxios.jsx  numberIncrease.jsx
frontend/src/components/landing/: Navbar.jsx
