[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15"
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
regex = "1.11.1"
warp-cors = "0.3.0"
